Worked on test cases changes as discussed 17-07-2025

--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -15,6 +15,6 @@
     </div>
 
     <button type="submit" class="btn btn-primary w-100" (click)="SubmitForm()"> Submit </button>
-        <button type="submit" class="btn btn-bordered w-100 mt-3"> Cancel </button>
+        <button type="button" class="btn btn-bordered w-100 mt-3" routerLink="/auth/login"> Cancel </button>
   </form>
 </div>
