--- a/src/app/auth/forgot-userid/forgot-userid.component.html
+++ b/src/app/auth/forgot-userid/forgot-userid.component.html
@@ -2,7 +2,7 @@
   <div class="auth-page-content py-3 px-4">
     <h2 class="font-large text-center text-primary">Forgot User Id</h2>
     <p class="text-center text-grey py-2"> Enter your registered Email Id to retrieve your User Id.<br>
-      </p>
+    </p>
   </div>
 
   <form class="login-form">
@@ -13,5 +13,6 @@
     </div>
 
     <button type="submit" class="btn btn-primary w-100" (click)="SubmitForm()"> Submit </button>
+    <button type="button" class="btn btn-bordered w-100 mt-3" routerLink="/auth/login"> Cancel </button>
   </form>
 </div>
