--- a/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
+++ b/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
@@ -42,12 +42,12 @@
 
         <div class="col-md-6">
             <div class="form-group">
-                <label>Date of Submit</label>
+                <label>Date of Submission</label>
                 <app-custom-datepicker formControlName="submit_date" [datepickerType]="'bsDatepicker'"
                     class="form-control" [dateFormate]="'yyyy/MM/dd'" [placeholder]="'yyyy/MM/dd'"
                     [bsCustConfg]="bsCustConfg" [minDate]="endMinScheduleDate">
                 </app-custom-datepicker>
-                <app-show-errors [ctrl]="depositForm.get('submit_date')" [requiredMesg]="'Submit Date is Required'">
+                <app-show-errors [ctrl]="depositForm.get('submit_date')" [requiredMesg]="'Date of Submission is Required'">
                 </app-show-errors>
             </div>
         </div>
