--- a/src/assets/scss/base/_forms.scss
+++ b/src/assets/scss/base/_forms.scss
@@ -104,13 +104,23 @@ border:1px solid #E6EFF5;
 .form-check-input[type=checkbox]{
    width: 20px;
     height: 20px;
-}
-.form-check-input:checked {
+      &:checked::after {
+    content: '✔';
+    position: absolute;
+    top: -1px;
+    left: 4px;
+    font-size: 13px;
+    color: white;
+  }
+  &:checked {
     background-color: #000000;
     border-color: #000000;
     width: 20px;
     height: 20px;
 }
+}
+
+
 // --login input css-
 .login-form {
      &.ng-untouched{
