--- a/src/assets/scss/pages/_select-service.scss
+++ b/src/assets/scss/pages/_select-service.scss
@@ -40,7 +40,8 @@
     }
   }
   p {
-    color: $text-grey;
+    color:$dark-blue;
+    margin-bottom:0;
   }
   .upload-doc {
     border: 1px solid #ececec;
