--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
@@ -1,5 +1,5 @@
 <div class="card-main p-4">
-  <h5>Integration</h5>
+  <h5>Deposit</h5>
 
   <div class="my-3">
     <label class="mb-2">Upload Type</label>
