--- a/src/app/pages/dashboard/add-escrow/deposit/deposit.component.html
+++ b/src/app/pages/dashboard/add-escrow/deposit/deposit.component.html
@@ -8,15 +8,6 @@
             <app-show-errors [ctrl]="depositForm.get('primary_account')"
                 [requiredMesg]="'Primary Account is Required'"></app-show-errors>
         </div>
-        <!-- <div class="col-12">
-            <label class="mb-2">Select All the Mandatory Documents for the Depositor to Upload*</label> -->
-        <!-- <div class="d-flex flex-wrap gap-2">
-                <button type="button" *ngFor="let doc of uploadOptions" (click)="toggleDocument(doc.value)"
-                    [ngClass]="{'btn-primary': selectedDocuments.has(doc.value), 'btn-outline-secondary': !selectedDocuments.has(doc.value)}"
-                    class="btn btn-sm">
-                    {{ doc.value }}
-                </button>
-            </div> -->
         <div class="col-12">
             <label class="mb-2">Select All the Mandatory Documents for the Depositor to Upload</label>
             <div class="d-flex flex-wrap gap-2">
@@ -30,16 +21,6 @@
             <!-- <app-show-errors [ctrl]="depositForm.get('documents')"
                 [requiredMesg]="'At least one Document is required'"></app-show-errors> -->
         </div>
-        <!-- </div> -->
-        <!-- <div class="col-md-12">
-            <label>Verification</label>
-            <ng-select [items]="verificationOptions" bindLabel="value" bindValue="id"
-                formControlName="verification_type" [multiple]="true" placeholder="Select Verification"
-                [closeOnSelect]="false" [searchable]="false">
-            </ng-select>
-            <app-show-errors [ctrl]="depositForm.get('verification_type')"
-                [requiredMesg]="'Verification is Required'"></app-show-errors>
-        </div> -->
          <div class="col-md-12">
             <label>Verification</label>
         <ng-select [items]="verificationOptions" bindLabel="value" bindValue="id" formControlName="verification_type"
@@ -50,7 +31,7 @@
         </ng-select>
         </div>
 
-        <div class="col-md-12">
+        <div class="col-md-12" *ngIf="isnoneSelected">
             <label>Required Verification For</label>
             <select class="form-select" formControlName="verification_for">
                 <option *ngFor="let option of verificationFor" [value]="option.value">{{ option.value }}</option>
@@ -58,17 +39,6 @@
             <app-show-errors [ctrl]="depositForm.get('verification_for')"
                 [requiredMesg]="'Verification for is Required'"></app-show-errors>
         </div>
-
-        <!-- <div class="col-12">
-            <label>Select Mandatory Certificates to Upload (For Depositor)</label>
-            <div class="d-flex flex-wrap gap-2">
-                <button type="button" *ngFor="let cert of certificateOptions" (click)="toggleCertificate(cert.value)"
-                    [ngClass]="{'btn-primary': selectedCertificates.has(cert.value), 'btn-outline-secondary': !selectedCertificates.has(cert.value)}"
-                    class="btn btn-sm">
-                    {{ cert.value }}
-                </button>
-            </div>
-        </div> -->
         <div class="col-12">
             <label>Select Mandatory Certificates to Upload (For Depositor)</label>
             <div class="d-flex flex-wrap gap-2">
