--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-physical/view-physical.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-physical/view-physical.component.html
@@ -51,7 +51,7 @@
 
         <div class="col-md-4">
           <div class="form-control bg-light d-flex justify-content-between mt-2">
-            <label>Upload Device Pict</label>
+            <label>Upload Device Picture</label>
             <a *ngIf="physicalDetails?.device_picture" [href]="physicalDetails?.device_picture" target="_blank"
               rel="noopener noreferrer">
               <img src="assets/img/view.png">
@@ -62,17 +62,34 @@
 
         <div class="col-md-4">
           <div class="form-control bg-light d-flex justify-content-between mt-2">
-            <label>Upload Packaging Pic</label>
+            <label>Upload Packaging Picture</label>
             <a *ngIf="physicalDetails?.packaging_picture" [href]="physicalDetails?.packaging_picture" target="_blank"
               rel="noopener noreferrer">
               <img src="assets/img/view.png">
             </a>
           </div>
         </div>
-
         <div class="col-md-4">
           <div class="form-control bg-light d-flex justify-content-between mt-2">
-            <label>Upload Other Pic</label>
+            <label>Upload VAPT Certificate</label>
+            <a *ngIf="physicalDetails?.vapt_certificate" [href]="physicalDetails?.vapt_certificate" target="_blank"
+              rel="noopener noreferrer">
+              <img src="assets/img/view.png">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-control bg-light d-flex justify-content-between mt-2">
+            <label>Upload ISO Certificate</label>
+            <a *ngIf="physicalDetails?.iso_certificate" [href]="physicalDetails?.iso_certificate" target="_blank"
+              rel="noopener noreferrer">
+              <img src="assets/img/view.png">
+            </a>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="form-control bg-light d-flex justify-content-between mt-2">
+            <label>Upload Other Picture</label>
             <a *ngIf="physicalDetails?.other_picture" [href]="physicalDetails?.other_picture" target="_blank"
               rel="noopener noreferrer">
               <img src="assets/img/view.png">
