--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -112,8 +112,8 @@
       </div>
 
       <div class="deposit-table gap-4 p-3 mt-3">
-        <dynamic-table [apiUrl]="environment.baseUrl + 'escrow/list'" [pageSize]="10"
-       [httpHeaders]="httpHeaders"   (action)="onTableAction($event)">
+        <dynamic-table  [isActionDisabledFn]="isActionDisabled" [apiUrl]="environment.baseUrl + 'escrow/list'" [pageSize]="10"
+       [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
         </dynamic-table>
         <!-- <table class="table">
           <thead>
