--- a/src/app/pages/staff-management/staff-list/staff-list.component.html
+++ b/src/app/pages/staff-management/staff-list/staff-list.component.html
@@ -1,6 +1,6 @@
 <button class="btn btn-primary add-role-btn" (click)="openModal()"> Add Staff</button>
 <div class="user-box">
-<dynamic-table [apiUrl]="environment.baseUrl + 'usermanagement/staff/list'" [pageSize]="10" [httpHeaders]="httpHeaders"
+<dynamic-table [showGlobalSearch]="true" [apiUrl]="environment.baseUrl + 'usermanagement/staff/list'" [pageSize]="10" [httpHeaders]="httpHeaders"
     (action)="onTableAction($event)">
 </dynamic-table>
 </div>
