--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
@@ -106,6 +106,20 @@
       <!--        </div>-->
       <!--        <div class="col-md-6 mt-2">Upload ISO Certificate</div>-->
     </div>
+        <div class="row" *ngIf="viewMode && softwareDeposit?.[0]?.verification">
+      <h5 class="my-3">Verification</h5>
+
+      <div class="col-md-6" *ngFor="let key of getVerificationKeys(softwareDeposit[0].verification)">
+        <div class="card p-3 mb-2 shadow-sm border">
+          <div class="d-flex justify-content-between align-items-center">
+            <h6 class="mb-0 text-capitalize">{{ key.replace('_', ' ') }}</h6>
+            <a [href]="softwareDeposit[0].verification[key]" target="_blank" rel="noopener noreferrer">
+              <img src="assets/img/view.png" alt="view" />
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
     <div class="row">
       <div class="col-12 col-lg-6">
         <label for="version" class="form-label"><strong>Version</strong></label>
