--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -21,7 +21,7 @@
     </div>
     <div class="text-end bottom-label mb-3">
       <a routerLink="/auth/forgot-password" class="text-gray">Forgot Password?</a>
-      <a routerLink="/auth/reset-password" class="text-gray">Reset Password?</a>
+      <!-- <a routerLink="/auth/reset-password" class="text-gray">Reset Password?</a> -->
     </div>
     <button type="submit" class="btn btn-primary w-100" (click)="Login()"> Login </button>
   </form>
