--- a/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
+++ b/src/app/pages/dashboard/add-escrow/release-condition/release-condition.component.html
@@ -94,7 +94,7 @@
             </div>
             <h3>Final Confirmation Required</h3>
             <div class="mt-3 text-start bg-white p-3 rounded-sm">
-                <div class="form-check mb-2">
+                <div class="form-check mb-2 d-flex gap-2">
                     <input class="form-check-input" type="checkbox" id="confirmCheck" [(ngModel)]="isConfirmed" />
                     <label class="form-check-label" for="confirmCheck">
                         <strong class="mb-2">Before proceeding, please ensure the following:</strong> 
