--- a/src/app/pages/dashboard/edit-escrow/edit-escrow.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow.component.html
@@ -41,12 +41,12 @@
                 <div class="text-center">
                     <div [ngClass]="{
           'circle': true,
-          'completed': step.step < currentStep,
-          'active': step.step === currentStep,
+          'completed': step.step <= currentStep,
           'upcoming': step.step > currentStep
         }">
-                        <span *ngIf="step.step < currentStep"><i class="fa-solid fa-check"></i></span>
-                        <span *ngIf="step.step === currentStep" style="color:#062745;">●</span>
+                  <!-- 'active': step.step === currentStep, -->
+                        <span *ngIf="step.step <= currentStep"><i class="fa-solid fa-check"></i></span>
+                        <!-- <span *ngIf="step.step === currentStep" style="color:#062745;">●</span> -->
                         <span *ngIf="step.step > currentStep" style="color:#E6EFF5;">○</span>
                     </div>
                     <div class="mt-2 position-absolute stepname">{{ step.name }}</div>
