--- a/src/styles.scss
+++ b/src/styles.scss
@@ -117,3 +117,14 @@ textarea[readonly] {
   cursor: not-allowed;
 }
 
+table{
+  background:transparent!important;
+  border: 1px solid #E6EFF5;
+
+  td,th{
+border: 0 !important;
+    border-bottom: 1px solid;
+    border-bottom: 1px solid #F7F7F7 !important;
+  }
+}
+
