--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
@@ -53,7 +53,7 @@
             </label>
             <input type="file" class="form-control" (change)="HandleSourceCodeUpload($event)"
                    *ngIf="!this.codeUpload"/>
-            <span *ngIf="this.codeUpload" class="text-red">Source Code Uploaded</span>
+            <span *ngIf="this.codeUpload" class="text-green">Source Code Uploaded</span>
           </div>
 
 
