--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -204,6 +204,9 @@ img {
 .bg-grey {
   background: $gray6 !important;
 }
+.text-green {
+  color: $green !important;
+}
 
 .custooltip-wrap {
   .custooltip {
