--- a/src/assets/scss/pages/_escrow.scss
+++ b/src/assets/scss/pages/_escrow.scss
@@ -31,6 +31,7 @@ background: #E3EBFF;
      max-width: fit-content;
     overflow: hidden;
     padding: 15px;
+   margin-bottom: 15px;
 }
 .tick{
         width: 30px;
