--- a/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
+++ b/src/app/pages/dashboard/dashboard-list/dashboard-list.component.html
@@ -111,7 +111,7 @@
         <button class="btn btn-primary" (click)="addNew()">Add New</button>
       </div>
 
-      <div class="deposit-table gap-4 p-3 mt-3">
+      <div class="mt-3">
         <dynamic-table  [isActionDisabledFn]="isActionDisabled" [apiUrl]="environment.baseUrl + 'escrow/list'" [pageSize]="10"
        [httpHeaders]="httpHeaders" (action)="onTableAction($event)">
         </dynamic-table>
