--- a/src/styles.scss
+++ b/src/styles.scss
@@ -118,13 +118,30 @@ textarea[readonly] {
 }
 
 table{
-  background:transparent!important;
-  border: 1px solid #E6EFF5;
+      background: #fff;
+    border: 1px solid #f7f7f7;
+    border-radius: 10px;
+    padding: 1rem;
 
   td,th{
 border: 0 !important;
     border-bottom: 1px solid;
     border-bottom: 1px solid #F7F7F7 !important;
+      background:transparent!important;
+  }
+
+  td{
+color: #767676;
+    font-weight: 400;
+    font-size: 16px;
   }
 }
 
+// for table filter
+.filter-toolbar{
+      background: #fff;
+    border: 1px solid #E6EFF5;
+    border-radius: 10px;
+    align-items: center;
+    padding: 1rem;
+}
