--- a/src/assets/scss/base/_base.scss
+++ b/src/assets/scss/base/_base.scss
@@ -208,6 +208,8 @@ img {
   color: $green !important;
 }
 
+.border-green{border: 2px solid rgb(137, 251, 137);}
+
 .custooltip-wrap {
   .custooltip {
     display: none;
