Worked on add escrow module

--- a/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
+++ b/src/app/pages/dashboard/edit-escrow/edit-escrow-details/view-deposit/view-software/view-software.component.html
@@ -283,7 +283,7 @@
     
     <div class="row">
       <div class="col-12 col-lg-6">
-        <label for="version" class="form-label"><strong>Version</strong></label>
+        <label for="version" class="form-label"><strong>Version: </strong></label>
         <input *ngIf="!viewMode" type="text" id="version" class="form-control" [(ngModel)]="version"
           placeholder="Enter version">
         <span *ngIf="viewMode">{{ version }}</span>
