Worked on ui testing module

--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -4,7 +4,7 @@
     <div class="logo"><img src="assets/img/logo.png" width="300" alt="SprintExcode"></div>
     <div class="d-flex justify-content-center flex-column">
       <div class="login-text">
-        <h2 class="font-large">A Safe Bridge Between Creators and User</h2>
+        <h2 class="font-large">A Safe Bridge Between Creators and Users</h2>
         <p class="pe-5">SprintExcode connects software providers and users with a secure escrow system. Providers
           know
           their code
