--- a/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
+++ b/src/app/pages/dashboard/add-escrow/deposit-physical/deposit-physical.component.html
@@ -39,7 +39,14 @@
                 </app-show-errors>
             </div>
         </div>
-
+        <div class="col-md-6" *ngIf="depositForm.get('device')?.value === 'others'">
+            <div class="form-group">
+                <label>Specify Other Device</label>
+                <input type="text" formControlName="other" class="form-control" />
+                <app-show-errors [ctrl]="depositForm.get('other')"
+                    [requiredMesg]="'Other Device is required'"></app-show-errors>
+            </div>
+        </div>
         <div class="col-md-6">
             <div class="form-group">
                 <label>Date of Submission</label>
@@ -47,7 +54,8 @@
                     class="form-control" [dateFormate]="'yyyy/MM/dd'" [placeholder]="'yyyy/MM/dd'"
                     [bsCustConfg]="bsCustConfg" [minDate]="endMinScheduleDate">
                 </app-custom-datepicker>
-                <app-show-errors [ctrl]="depositForm.get('submit_date')" [requiredMesg]="'Date of Submission is Required'">
+                <app-show-errors [ctrl]="depositForm.get('submit_date')"
+                    [requiredMesg]="'Date of Submission is Required'">
                 </app-show-errors>
             </div>
         </div>
@@ -86,27 +94,28 @@
                         [requiredMesg]="field.label + ' is Required'">
                     </app-show-errors>
 
-                             <div *ngIf="depositForm.get(field.controlName)?.value" class="view-img">
-                <p class="mb-1 mt-1">
-                    <a [href]="depositForm.get(field.controlName)?.value" target="_blank" class="text-decoration-none">
-                        <img src="assets/img/view.png" class="pe-2" />
-                        <!-- View Uploaded Image -->
-                    </a>
-                </p>
-            </div>
+                    <div *ngIf="depositForm.get(field.controlName)?.value" class="view-img">
+                        <p class="mb-1 mt-1">
+                            <a [href]="depositForm.get(field.controlName)?.value" target="_blank"
+                                class="text-decoration-none">
+                                <img src="assets/img/view.png" class="pe-2" />
+                                <!-- View Uploaded Image -->
+                            </a>
+                        </p>
+                    </div>
                 </div>
-         
+
             </div>
-          
+
         </ng-container>
 
-        <div class="col-md-12">
+        <!-- <div class="col-md-12">
             <div class="form-group">
                 <label>Remarks</label>
                 <textarea formControlName="remarks" class="form-control" rows="3" placeholder="Enter any remarks">
       </textarea>
             </div>
-        </div>
+        </div> -->
 
         <div class="col-12">
             <button class="btn btn-primary" [disabled]="!depositForm.valid" (click)="submit()">Submit</button>
